--- a/index.html
+++ b/index.html
@@ -5,11 +5,96 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Index</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link rel="stylesheet" href="public/css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@300;400;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+    <title>Documentation</title>
 </head>
 
 <body>
-    Index.html
+
+    <!-- navbar -->
+
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="navbar">
+        <div class="container">
+            <a class="navbar-brand" href="#">myFlixDB API</a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarsExample07" aria-controls="navbarsExample07" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+            <div class="collapse navbar-collapse" id="navbarsExample07">
+                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="./public/documentation.html">Documentation</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" aria-current="page" href="https://github.com/toNy5oo/movie_api" target="_blank">Github</a>
+                    </li>
+                    <!-- <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="dropdown07" data-bs-toggle="dropdown" aria-expanded="false">Dropdown</a>
+                        <ul class="dropdown-menu" aria-labelledby="dropdown07">
+                            <li><a class="dropdown-item" href="#">Action</a></li>
+                            <li><a class="dropdown-item" href="#">Another action</a></li>
+                            <li><a class="dropdown-item" href="#">Something else here</a></li>
+                        </ul>
+                    </li> -->
+                </ul>
+                <!-- <form>
+                    <input class="form-control" type="text" placeholder="Search" aria-label="Search">
+                </form> -->
+            </div>
+        </div>
+    </nav>
+
+    <!-- Jumbotron -->
+
+    <div class="container">
+        <div class="jumbotron py-3">
+            <div class="container">
+                <h1 class="display-4">Welcome to myFlixDB API</h1>
+                <p class="lead">This API has been written with the purpose of learning Node.js, REST, Express, MongoDB and Mongoose.</p>
+                <hr class="my-4">
+                <div class="d-flex-column justify-content-between align-items-baseline">
+                    <p class="my-4">The list of technologies used in this exercise are the following:</p>
+
+                    <div class="list-group">
+                        <a href="https://nodejs.org/it/" target="_blank" class="list-group-item list-group-item-action" aria-current="true">
+                            <h5 class="mb-2">Node.js</h5>
+                            <p class="mb-1">Javscript runtime built on V8 Chrome engine</p>
+                            <small class="text-muted">Click to know more</small>
+                        </a>
+                        <a href="https://restfulapi.net/" target="_blank" class="list-group-item list-group-item-action">
+                            <h5 class="mb-1">REST</h5>
+                            <p class="mb-1">REST is an acronym for REpresentational State Transfer and an architectural style for distributed hypermedia systems. Like other architectural styles, REST has its guiding principles and constraints. These principles must be
+                                satisfied if a service interface needs to be referred to as RESTful. </p>
+                            <small class="text-muted">Click to know more</small>
+                        </a>
+                        <a href="https://www.mongodb.com/" target="_blank" class="list-group-item list-group-item-action">
+                            <h5 class="mb-1">MongoDB</h5>
+                            <p class="mb-1">MongoDB is a NoSQL Database fast and secure.</p>
+                            <small class="text-muted">Click to know more</small>
+                        </a>
+                        <a href="https://mongoosejs.com/" target="_blank" class="list-group-item list-group-item-action">
+                            <h5 class="mb-1">Mongoose</h5>
+                            <p class="mb-1">Mongoose provides a straight-forward, schema-based solution to model your application data. It includes built-in type casting, validation, query building, business logic hooks and more, out of the box. </p>
+                            <small class="text-muted">Click to know more</small>
+                        </a>
+                        <a href="https://expressjs.com/" target="_blank" class="list-group-item list-group-item-action">
+                            <h5 class="mb-1">Express JS</h5>
+                            <p class="mb-1">Express is a minimal and flexible Node.js web application framework that provides a robust set of features for web and mobile applications.</p>
+                            <small class="text-muted">Click to know more</small>
+                        </a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
