Applied JWTToken authentication on enpoints.

--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
                             <p class="mb-1">Express is a minimal and flexible Node.js web application framework that provides a robust set of features for web and mobile applications.</p>
                             <small class="text-muted">Click to know more</small>
                         </a>
+                        <a href="https://www.passportjs.org/" target="_blank" class="list-group-item list-group-item-action">
+                            <h5 class="mb-1">Passport</h5>
+                            <p class="mb-1">Passport is an authentication middleware for Node.js and Express. It uses blocks of code called strategies to enable certain means of authentication and authorization multiple times throughout your application.</p>
+                            <small class="text-muted">Click to know more</small>
+                        </a>
                     </div>
                 </div>
             </div>
