Update response from fav movies add and remove

--- a/public/index.html
+++ b/public/index.html
@@ -45,8 +45,8 @@
                         </ul>
                     </li> -->
                 </ul>
-                <a class="btn btn-secondary m-3" href="./register.html">Create an account</a>
-                <a class="btn btn-primary" href="./login.html">Login</a>
+                <!-- <a class="btn btn-secondary m-3" href="./register.html">Create an account</a>
+                <a class="btn btn-primary" href="./login.html">Login</a> -->
 
             </div>
         </div>
