--- a/public/documentation.html
+++ b/public/documentation.html
@@ -84,7 +84,7 @@
 
                             <div class="col-12 span-2 post d-flex align-items-center justify-content-center">
                                 <button class="badge badge-pill badge-primary text-dark m-3" disabled>POST</button>
-                                <p class="text-dark m-3"><strong>/register</strong></p>
+                                <p class="text-dark m-3"><strong>/users</strong></p>
                                 <p class="text-dark m-3">Create a new account for a user</p>
 
                             </div>
@@ -92,6 +92,7 @@
                             <div class="d-flex p-3 justify-content-between align-content-between text-center">
                                 <div class="col">Request Body data </div>
                                 <div class="col">Response Body data</div>
+                                <p>JSON object holding data about every user: <br>Array of: <code>{ _id: Number, Username: String, Password: String, Email: String, Birthday: Date, FavoriteMovies: [ref_id: 'Movies'] }</code></p>
                             </div>
                         </div>
 
